웹연습파일 수정

--- a/10_webEx.html
+++ b/10_webEx.html
@@ -15,8 +15,9 @@
 <div class="bc">
     <header>
         <div class="logo">Leica</div>
-        <h1>kim's kitchen</h1>
-        <h2>cooking class</h2>
+        <h1>kim's kitchen <br>
+        <span>cooking class</span>
+        </h1>
     </header>
 
     <nav>
